--- a/popup.scss
+++ b/popup.scss
@@ -1,16 +1,19 @@
-body{
-	line-height: 1.3;
-	width: 15em;
+body {
+    line-height: 1.3;
+    width: 15em;
 }
 
-ul{
-	list-style-type: none;
-	padding-left: 0;
-	li{
-		transition: background 2s ease;
-		margin: .5em 0;
-		&:hover{
-			background: #FFCB7E;
-		}
-	}
+ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+ul#definitionZone {
+    font-size: 15px;
+    li {
+        margin: .5em;
+    }
+    span {
+        font-weight: bold;
+    }
 }
