--- a/popup.css
+++ b/popup.css
@@ -1,16 +1,24 @@
 body {
   line-height: 1.3;
+  font-size: 16px;
   width: 15em; }
 
 ul {
   list-style-type: none;
   padding-left: 0; }
-
-ul#definitionZone {
-  font-size: 15px; }
-  ul#definitionZone li {
-    margin: .5em; }
-  ul#definitionZone span {
+  ul label {
     font-weight: bold; }
+  ul button {
+    border: none;
+    cursor: pointer;
+    margin-top: .5em; }
+
+ul#definitionZone li {
+  margin: .5em; }
+ul#definitionZone span {
+  font-weight: bold; }
+
+.error {
+  color: red; }
 
 /*# sourceMappingURL=popup.css.map */
