--- a/popup.scss
+++ b/popup.scss
@@ -1,19 +1,31 @@
 body {
     line-height: 1.3;
+    font-size: 16px;
     width: 15em;
 }
 
 ul {
     list-style-type: none;
     padding-left: 0;
+    label {
+        font-weight: bold;
+    }
+    button{
+    	border: none;
+    	cursor: pointer;
+    	margin-top: .5em;
+    }
 }
 
 ul#definitionZone {
-    font-size: 15px;
     li {
         margin: .5em;
     }
     span {
         font-weight: bold;
     }
+}
+
+.error{
+	color: red;
 }
